# gamepad

./: .env  CMakeLists.txt  justfile
include/: gamepad.h  tusb_config.h  usb_descriptors.h
lib/ws2812/: CMakeLists.txt
lib/ws2812/include/: ws2812.h
lib/ws2812/src/: ws2812.c  ws2812.pio
src/: gamepad.c  main.c  usb_descriptors.c
